--- a/4_Projects/4_Social-Media/src/App.css
+++ b/4_Projects/4_Social-Media/src/App.css
@@ -9,3 +9,20 @@
 .sidebar{
     min-height: 735px;
 }
+
+.postCard{
+    margin: 30px 50px;
+}
+
+.hashtag{
+    margin: 0px 4px;
+}
+
+.reaction{
+    margin : 15px 0 0 0;
+}
+
+.createPost{
+    margin: 60px;
+    width: 80%;
+}
